--- a/DjangoProject/templates/moje_pliki.html
+++ b/DjangoProject/templates/moje_pliki.html
@@ -33,7 +33,7 @@
                 <td class="komorka-klucz">
                     <details id="{{ plik.id }}">
                         <summary>Pokaż klucz</summary>
-                        <pre>{{ plik.klucz }}</pre>
+                        <pre onclick="kopiujDoSchowka(this)">{{ plik.klucz }}</pre>
                     </details>
                 </td>
                 <td>
